# nonebot-plugin-nailongmagic

./: README.md  pyproject.toml
nonebot_plugin_nailongmagic/: __init__.py  config.py  handler.py  image_url.py
nonebot_plugin_nailongmagic/model/: __init__.py  hf_model.py
